[project]
name = "sql-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=4.2.0",
    "matplotlib>=3.10.9",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "requests-cache>=1.3.2",
    "retry-requests>=2.0.0",
]
